@@ -1,3 +1,9 @@
+2007-01-27  Paolo Borelli  <pborelli@katamail.com>
+
+	* gedit/gedit-commands-file.c: when raising an already
+	open document, go to the line specified on the command
+	line. Bug #401219.
+
 2007-01-24  Steve Frécinaux  <code@istique.net>
 
 	* plugins/modelines/modeline-parser.c: fix handling of the very last
